# healdit

./: .gitignore  pyproject.toml  requirements.txt
config/: healdit.yaml  healdit_hyperparam.yaml  healdit_hyperparam_test.yaml  healvae_hp.yaml  healvae_hp_short_wide.yaml  healvit.yaml
config/modules/: adam.yaml
config/normalisation/: era5_1979_2015_1deg.yaml
config/weight_init/: sqrtn.yaml  zero.yaml
environments/: environment.yaml
healdit/: __init__.py  _typing.py  batch.py  datasets.py  heal.py  healparts.py  healvae.py  healvaedecoder.py  healvaeencoder.py  parts.py  train.py
healdit/models/: __init__.py  heal.py  healparts.py  healvae.py  healvaedecoder.py  healvaedecoder2.py  healvaeencoder.py  parts.py
healdit/models/updown/: __init__.py  updowngraph.py  updownsampleonly.py  updownvaedct.py  updownvaewindow.py  updownvaewindowbatchnorm.py  updownvaewindownonresid.py  updownwindow.py
healdit/schemas/: __init__.py  config.py
healdit/utils/: __init__.py  geo.py  graph.py  heal.py  parsers.py  utils.py  weights.py
healdit/utils/hydra/: schemas.py
healdit/utils/parsers/: __init__.py  parsers.py  utils.py
healvit/: __init__.py  healparts.py  healvae.py  healvaedecoder.py  healvaeencoder.py  parts.py
healvit/utils/: __init__.py  graph.py
hydrainit/: schemas.py
scripts/: bucket2disk.py  bucket2disk.sh  data2bucket.py  data2bucket.sh  data_download.py  data_download.sh  healdit_test.py  healvae_hp.py  healvit_test.py  hyperparam_tests.py  norm_calc.py  norm_calc.sh  rechunk.py  rechunk.sh  run.sh
utils/: parsers.py
