[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healdit"
version = "0.1.0"
dependencies = [
    "antlr4-python3-runtime>=4.9.3",
    "astropy>=6.0.0",
    "healpy>=1.16.0",
    "hpgeom>=1.5.0",
    "hydra-core>=1.3.2",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "scipy>=1.10.0",
    "PyYAML>=6.0",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["healdit*"] } }
include-package-data = true